implemented profiles get endpoint
